<resources>
    <string name="app_name">BJJ Analytics</string>
    <string name="app_name_pro">BJJ Analytics Pro</string>

    <string name="action_settings">Settings</string>
    <string name="tourney_activity">Add tournament match statistcs.</string>
    <string name="tourney_activity_edit">Edit tournament match statistcs.</string>
    <string name="title_activity_add_tourney">AddTourney</string>
    <string name="title_activity_view_tourn">ViewTourney</string>
    <string name="title_activity_add_train">AddTrain</string>
    <string name="title_activity_add_tech">AddTech</string>
    <string name="title_activity_view_train">ViewTrain</string>
    <string name="title_activity_add_weight">AddWeight</string>
    <string name="title_activity_add_time">AddTime</string>
    <string name="title_activity_add_drill">AddDrill</string>
    <string name="title_activity_edit_drill">EditDrill</string>
    <string name="title_activity_edit_tourn">EditTourn</string>
    <string name="title_activity_edit_train">EditTrain</string>
    <string name="title_activity_delete_weight">DeleteWeight</string>
    <string name="title_activity_login">Login</string>

    <string name="pts_scored">Points Scored: </string>
    <string name="pts_allowed">Points Allowed: </string>
    <string name="swp_att">Sweeps Attempted: </string>
    <string name="swp_suc">Sweeps Successful: </string>
    <string name="pass_att">Passes Attempted: </string>
    <string name="pass_suc">Passes Successful: </string>
    <string name="td_att">Takedowns Attempted: </string>
    <string name="td_suc">Takedowns Successful: </string>
    <string name="sub_att">Submissions Attempted: </string>
    <string name="sub_suc">Submission? </string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="match_time">Match Time (min):</string>
    <string name="weight_class">Weight:</string>
    <string name="tourn_name">Tournament Name:</string>
    <string name="tourn_add">Add</string>
    <string name="tourn_del">Delete All</string>
    <string name="view_tourn_activity">Tournament Match Stats</string>
    <string name="view_train_activity">Training Session Stats</string>
    <string name="tourn_totals">Tournament Point Totals</string>
    <string name="tourn_percentages">Tournament Offense Percentages</string>
    <string name="train_percentages">Sparring Offense Percentages</string>
    <string name="train_averages">Sparring Averages (Per Match)</string>
    <string name="tourn_averages">Tournament Averages (Per Match)</string>
    <string name="tourn_highs">Tournament Highs</string>
    <string name="back_takes">Back Takes:</string>
    <string name="mount">Number of Mount Positions:</string>
    <string name="win">Win?</string>
    <string name="main_record_label">Tournament Record:</string>

    <string name="training_activity">Add training match statistcs.</string>
    <string name="train_name">Match Name:</string>
    <string name="sub_suc_train">Submissions:</string>
    <string name="train_add">Add</string>

    <string name="tech_activity">Add technique.</string>
    <string name="tech_name">Technique:</string>
    <string name="tech_type">Category:</string>
    <string name="tech_note">Notes:</string>
    <string name="tech_URL">Technique URL:</string>
    <string name="tech_add">Add</string>
    <string name="view_tech_activity">Your BJJ Technique</string>
    <string name="edit_tech_activity">Edit Technique</string>
    <string name="title_activity_view_tech">ViewTech</string>
    <string name="title_activity_edit_tech">EditTech</string>
    <string name="drill_activity">Add drill.</string>
    <string name="drill_activity_edit">Edit drill.</string>
    <string name="drill_name">Drill Name:</string>
    <string name="drill_add_reps">Add reps to total:</string>
    <string name="drill_total_reps">Total reps performed:</string>
    <string name="drill_track">Track this drill in stats?</string>
    <string name="drill_del">Delete All</string>
    <string name="weight_del">Delete All</string>
    <string name="tech_del">Delete All</string>
    <string name="time_del">Delete All</string>
    <string name="del_single_weight">Delete Weight</string>


    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string> <!-- test unit -->
    <string name="real_ad_unit_id">ca-app-pub-6102582437843864/3010260639</string>

    <string name="weight_add">Add</string>


    <string-array name="drawerBar">
        <item>Main</item>
        <item>Add Tourney Stats</item>
        <item>View Tourney List</item>
    </string-array>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
</resources>
