<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.analytics.bjj.AddWeight">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
    <!--android:orderInCategory="100" app:showAsAction="never" />-->

    <item
        android:id="@+id/weight_add"
        android:orderInCategory="100"
        app:showAsAction="always|withText"
        android:title="@string/tech_add"/>
    <item
        android:id="@+id/weight_del"
        android:orderInCategory="100"
        android:title="@string/weight_del"/>
    <item
        android:id="@+id/delete_weight_menu"
        android:orderInCategory="100"
        android:title="@string/del_single_weight"/>
</menu>