<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.org.bjjanatest.AddDrill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drill_activity" />
            </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/drillNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/drill_name" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/drillNameEV"
                android:layout_alignParentRight="true"
                android:singleLine="true"
                android:maxLength="200"
                android:text="Drill"/>

        </RelativeLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/drill_total_reps" />

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/drillRepTotalEV"
                    android:layout_alignParentRight="true"
                    android:singleLine="true"
                    android:maxLength="3"
                    android:inputType="numberSigned"
                    android:text="0"/>

            </RelativeLayout>
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/edit_drill_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="saveDrill"
                    android:src="@drawable/ok_100"
                    android:background="@android:color/transparent"
                    android:text="Save" />
            </LinearLayout>
            </LinearLayout>


        </LinearLayout>

</LinearLayout>
